--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # Ignore Gradle build output directory
 build
 
+
+
 # Compiled class file
 *.class
 
@@ -28,3 +30,6 @@ build
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# Do not ignore Gradle wrapper
+!gradle/wrapper/*
