--- a/railways/src/main/webapp/WEB-INF/web.xml
+++ b/railways/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,12 @@
             <include-prelude>/WEB-INF/jspf/prelude.jspf</include-prelude>
             <include-coda>/WEB-INF/jspf/coda.jspf</include-coda>
         </jsp-property-group>
+        <jsp-property-group>
+            <url-pattern>*.jspf</url-pattern>
+            <page-encoding>UTF-8</page-encoding>
+            <scripting-invalid>false</scripting-invalid>
+            <el-ignored>false</el-ignored>
+        </jsp-property-group>
     </jsp-config>
 
     <!-- Welcome file -->
